Closed Bug 34061 Opened 24 years ago Closed 24 years ago

nearly infinite loop in nsXULDocument::AddSubtreeToDocument() caused by nsXULElement::GetAttributeCount()

Categories

(SeaMonkey :: MailNews: Message Display, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: sspitzer, Assigned: waterson)

References

Details

Attachments

(3 files)

I have a message (I'll attach the mbox format of it) that causes a nearly
infinite loop.

nsXULElement::GetAttributeCount() gets called, and we fall through with out
setting aResult, so it is left uninitialized.

in my case, that left it as 57775032, which means I spent a long time in the for
loop in AddSubtreeToDocument()

I've started a "patch" that prevents the infinite loop.  (It works for me.)
I'll attach the mbox of the evil message next.
updating summary.

now to attach the evil message.
Summary: specific messages causes nearly infinite loop in nsXULDocument::AddSubtreeToDocument() caused by nsXULElement::GetAttributeCount() → nearly infinite loop in nsXULDocument::AddSubtreeToDocument() caused by nsXULElement::GetAttributeCount()
fix ready
Status: NEW → ASSIGNED
waterson, check that in.  r=sspitzer
a=granrose
fix checked in. update nsXULElement::GetAttributeCount().
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
*** Bug 34080 has been marked as a duplicate of this bug. ***
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: