Bug 34061. Fix uninitialized memory problems when called from nsXULDocument::AddSubtreeToDocument().